--- a/css/main.css
+++ b/css/main.css
@@ -8,35 +8,35 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto 1fr;
     height: 100vh;
+    width: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-
-}
-
-h1 {
-    align-content: center;
+    justify-content: center;
 }
 
 header {
     display: flex;
-    align-items: center;
     height: 30vh;
     width: 100vmin;
-    text-align: center;
+    justify-content: center;
+
 }
 
 main {
     display: flex;
     flex-direction: row;
     border-radius: 3vmin;
+    height: 50vh;
+    justify-content: center;
 }
 
 img {
     width: 250px;
     height: 200px;
-    padding: 10px;
-    margin: 10px;
+    padding: 0 40px 0 0;
+}
+
+input {
+    grid-column: span 3;
 }
