--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,31 @@
 html * {
     box-sizing: border-box;
-
+    margin: auto;
+    color: #2c2c2c;
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", Cent
 }
 
 body {
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto 1fr;
     height: 100vh;
     width: 100vh;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: radial-gradient(transparent, black) #d5d5d5;
+}
+
+#header {
+    display: flex;
+    justify-content: center;
+
 }
 
 header {
-    display: flex;
-    height: 30vh;
+    align-items: center;
+    height: 5vh;
     width: 100vmin;
     justify-content: center;
 
@@ -32,11 +40,27 @@ main {
 }
 
 img {
-    width: 250px;
-    height: 200px;
+    width: 280px;
+    height: 250px;
     padding: 0 40px 0 0;
+    align-items: center;
 }
 
-input {
-    grid-column: span 3;
+/* Text shadow effect */
+
+h1 {
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+    font-size: 92px;
+    padding: 80px 50px;
+    text-align: center;
+    text-transform: uppercase;
+    text-rendering: optimizeLegibility;
+
+    color: #2c2c2c;
+    background: radial-gradient(transparent, black) #d5d5d5;
+    letter-spacing: .05em;
+    text-shadow:
+        4px 4px 0px #d5d5d5,
+        7px 7px 0px rgba(0, 0, 0, 0.2);
+
 }
