adds film countdown logic

--- a/css/main.css
+++ b/css/main.css
@@ -54,23 +54,25 @@ main {
     display: flex;
     flex-direction: row;
     border-radius: 3vmin;
-    height: 50vh;
+    height: 40vh;
     width: 80vh;
-    padding: 10px 10px 20px;
+    padding: 30px 0;
     justify-content: center;
+    border: solid;
 }
 
 footer {
+    justify-content: center;
+    align-items: center;
     font-family: 'Yesteryear';
     height: 30vh;
-    width: 150vh;
     padding: 20px;
 
 }
 
 img {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     margin: 20px;
     align-items: center;
 
@@ -94,7 +96,8 @@ button {
     font-size: 25px;
 }
 
-/* Film countdown 
+
+
 svg {
     display: inline-block;
 }
@@ -107,41 +110,22 @@ svg {
     user-select: none;
 }
 
-#film-container {
-    width: 100%;
-    height: 100%;
-    background: url('//res.cloudinary.com/thdoan/image/upload/v1509581279/countdown/film_grain-small.gif') no-repeat;
-    background-size: 100% 100%;
-}
-
 #film-countdown,
 #message-container {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-#message-container text {
-    font: normal 28px Calibri, sans-serif;
-    opacity: 0;
-}
-
-body.message #film-container {
-    opacity: 0;
-    transition: opacity 1.5s;
-}
-
-body.message #message-container text {
-    opacity: 1;
-    transition: opacity 1.5s;
+    width: 46%;
+    height: 39.5%;
+    margin-left: 455px;
+    margin-top: 195px;
+    background-color: #DAD5C2;
+    border-radius: 3vmin;
 }
 
 #numbers text {
     fill: black;
-    font: bold 120px Arial, sans-serif;
-    letter-spacing: -10px;
+    font: bold 80px Arial, sans-serif;
     opacity: 0;
 }
 
@@ -160,25 +144,11 @@ body.message #message-container text {
     transform-origin: 50% 50%;
 }
 
-.line01,
-.line02 {
-    stroke: #deedee;
-}
-
-.rectangle01 {
-    fill: gray;
-}
-
 /*** END RADIO DIAL ***/
 
-.animated-flicker {
-    height: 100%;
-    animation: flicker 10s 1;
-    opacity: 0.2;
-}
-
 .animated-rotate {
-    animation: rotate 1s 10;
+    /* rotations */
+    animation: rotate 1s 3;
 }
 
 #animated-text1 {
@@ -196,40 +166,6 @@ body.message #message-container text {
     animation-delay: 2s;
 }
 
-#animated-text4 {
-    animation: countdown 1s 1;
-    animation-delay: 3s;
-}
-
-#animated-text5 {
-    animation: countdown 1s 1;
-    animation-delay: 4s;
-}
-
-#animated-text6 {
-    animation: countdown 1s 1;
-    animation-delay: 5s;
-}
-
-#animated-text7 {
-    animation: countdown 1s 1;
-    animation-delay: 6s;
-}
-
-#animated-text8 {
-    animation: countdown 1s 1;
-    animation-delay: 7s;
-}
-
-#animated-text9 {
-    animation: countdown 1s 1;
-    animation-delay: 8s;
-}
-
-#animated-text10 {
-    animation: countdown 1s 1;
-    animation-delay: 9s;
-}
 
 @keyframes countdown {
     0% {
@@ -245,59 +181,15 @@ body.message #message-container text {
     }
 }
 
-@keyframes flicker {
-    0% {
-        opacity: 0.45;
-    }
-
-    10% {
-        opacity: 0.7;
-    }
-
-    23% {
-        opacity: 0.85;
-    }
-
-    30% {
-        opacity: 0.4;
-    }
-
-    41% {
-        opacity: 0.6;
-    }
-
-    46% {
-        opacity: 0.8;
-    }
-
-    53% {
-        opacity: 0.4;
-    }
-
-    60% {
-        opacity: 0.75;
-    }
-
-    75% {
-        opacity: 0.5;
-    }
-
-    79% {
-        opacity: 0.55;
-    }
-
-    100% {
-        opacity: 0.1;
-    }
-}
-
 @keyframes rotate {
+
     100% {
         stroke-dasharray: 3200 0;
     }
 }
 
-*/
+
+
 /* background noise effect */
 
 body:after {
