--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html * {
     font-family: 'Yesteryear', cursive;
     text-rendering: optimizeLegibility;
     color: #2c2c2c;
-    letter-spacing: .05em;
+    letter-spacing: .06em;
 }
 
 
@@ -71,6 +71,9 @@ footer {
     padding: 20px;
     border: 5px solid;
     border-radius: 8px;
+    text-shadow: 2px 2px 0px #bdb9b9,
+        7px 9px 0px rgba(0, 0, 0, 0.2);
+
 
 }
 
@@ -79,7 +82,7 @@ img {
     height: 30vmin;
     margin: 20px;
     align-items: center;
-    box-shadow: 0 0 30px 0px white;
+    box-shadow: 0 0 40px 0px white;
 }
 
 
@@ -99,6 +102,7 @@ button {
     border: 2px;
     border-radius: 5px;
     font-size: 25px;
+
 }
 
 .progbar {
